# Foam-Agent

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  api_server.py  api_wrapper.py  app.py  environment-docker.yml  environment.yml  foambench_main.py  init_database.py  learning_notes  pyproject.toml  tandem_wing.msh  user_req_tandem_wing.txt  user_requirement.txt  worker.py
.claude/skills/: foam.md
database/faiss/openfoam_allrun_scripts/: index.faiss  index.pkl
database/foamgpt/: foamgpt_data.py  foamgpt_gen.py  foamgpt_huggingface.py  foamgpt_openai.py  foamgpt_parser.py
database/raw/: openfoam_allrun_scripts.txt  openfoam_case_stats.json  openfoam_command_help.txt  openfoam_commands.txt  openfoam_tutorials_details.txt  openfoam_tutorials_structure.txt
database/script/: faiss_allrun_scripts.py  faiss_command_help.py  faiss_tutorials_details.py  faiss_tutorials_structure.py  finetune_data.py  gen_user_requirement.py  tutorial_parser.py
docker/: Dockerfile  README.md  foamagent-entrypoint.sh
src/: __init__.py  architect_node.py  codex_instructions_default.txt  config.py  input_writer_node.py  logger.py  main.py  models.py  post_processing_node.py  post_processing_node_pyvista.py  preprocessor_node.py  router_func.py  runner_node.py  tracking_aws.py  utils.py
src/mcp/: README.md  adapter.py  cli.py  fastmcp_server.py  start_mcp.py
src/nodes/: __init__.py  architect_node.py  hpc_runner_node.py  input_writer_node.py  local_runner_node.py  meshing_node.py  planner_node.py  reviewer_node.py  visualization_node.py
src/services/: __init__.py  apply_fix.py  architect.py  cases.py  files.py  input_writer.py  mesh.py  plan.py  review.py  run_hpc.py  run_local.py  visualization.py
tests/: test_lid_driven_cavity_mcp.py  test_lid_driven_cavity_services.py
(+29 files in other folders)
